[package]
name = "ns_rust_lib"
version = "0.1.0"
edition = "2021"
authors = ["Nick Schneider"]
description = "Sample library in Rust"
license = "MIT"
homepage = "https://github.com/campasachamp/ns_rust_lib"
repository = "https://github.com/campasachamp/ns_rust_lib"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
